# container-gke-gs-bucket-backup

./: Containerfile  README.md  entrypoint.sh  gs_bucket_sync.py  pyproject.toml  test_gs_bucket_sync.py
.github/workflows/: ci.yaml  publish.yaml
